🐛 fix: remove usage of List.getFirst() (Java 21) and use get(0) for Maven Java 17 compatibility